fix card text alignment

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -59,7 +59,7 @@
     background: #FFFFFF;
     border-radius: 0px 0px 10px 10px;
     width: 100%;
-    // height: 100%;
+    height: 68px;
     padding: 12px 0;
     display: flex;
     flex-direction: column;
@@ -69,6 +69,7 @@
     font-size: 16px;
     line-height: 24px;
     letter-spacing: 0.15px;
+    text-align: center;
   }
 
 }
